--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!--jQuery-->
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script type="text/javascript" src="js/jquery.modal.js"></script>
+    <script type="text/javascript" src="js/jquery.modal.min.js"></script>
     <script type="text/javascript">
 	$(document).ready(function(e) {
         //alert
