Refactored directory structure.

--- a/examples/index.html
+++ b/examples/index.html
@@ -5,12 +5,12 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>jQuery Modal 1.2.3 | CreativeDream</title>
 	<!--Stylesheets-->
-	<link href="css/jquery.modal.css" type="text/css" rel="stylesheet" />
-	<link href="css/jquery.modal.theme-xenon.css" type="text/css" rel="stylesheet" />
-	<link href="css/jquery.modal.theme-atlant.css" type="text/css" rel="stylesheet" />
+	<link href="../src/css/jquery.modal.css" type="text/css" rel="stylesheet" />
+	<link href="../src/css/jquery.modal.theme-xenon.css" type="text/css" rel="stylesheet" />
+	<link href="../src/css/jquery.modal.theme-atlant.css" type="text/css" rel="stylesheet" />
 	<!--jQuery-->
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script type="text/javascript" src="js/jquery.modal.js"></script>
+	<script type="text/javascript" src="../src/js/jquery.modal.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(e) {
 		//alert
